--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "firebase": "^10.12.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -17,6 +18,7 @@
     "sharp": "^0.33.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
